--- a/content/plugin/mux/combining-protocol-version-6-providers.mdx
+++ b/content/plugin/mux/combining-protocol-version-6-providers.mdx
@@ -25,19 +25,19 @@ The following provider server implementations are supported:
 
 ## Requirements
 
-Combined provider servers have the following requirements:
+To be combined, provider servers must meet the following requirements:
 
-* All provider schemas must match
-* All provider meta schemas must match
-* Only one provider may implement each resource and data source
+* All provider schemas must match.
+* All provider meta schemas must match.
+* Only one provider may implement each resource and data source.
 
-If publishing to the [Terraform Registry](/registry), the [Terraform Registry manifest file](https://www.terraform.io/registry/providers/publishing#terraform-registry-manifest-file) should have `metadata.protocol_versions` set to `["6.0"]`.
+If publishing to the [Terraform Registry](/registry), set `metadata.protocol_versions` to `["6.0"]` in the [Terraform Registry manifest file](https://www.terraform.io/registry/providers/publishing#terraform-registry-manifest-file).
 
 ## Code Implementation
 
-Use the [`tf6muxserver.NewMuxServer()`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux/tf6muxserver#NewMuxServer) function to create a combined provider server. For most providers, implement this in the provider `main()` function of the root directory `main.go` file or within a shared internal package to enable [testing for the combined provider](#testing-implementation). You can use [`tf6server.WithManagedDebug()`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov6/tf6server#WithManagedDebug) to enable debugger support.
+Use the [`tf6muxserver.NewMuxServer()`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux/tf6muxserver#NewMuxServer) function to create a combined provider server. Most providers implement this in the provider `main()` function of the root directory `main.go` file or within a shared internal package to enable [testing for the combined provider](#testing-implementation). You can use [`tf6server.WithManagedDebug()`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov6/tf6server#WithManagedDebug) to enable debugger support.
 
-The following example implements `tf6muxserver.NewMuxServer()` in a  `main()` function:
+The following example implements `tf6muxserver.NewMuxServer()` in a  `main()` function.
 
 ```go
 package main
@@ -97,7 +97,9 @@ func main() {
 
 ## Testing Implementation
 
-You can test individual providers using the same [acceptance tests](../sdkv2/testing/acceptance-tests) as before. To test the combined provider, use the acceptance testing framework available in [terraform-provider-sdk/v2/helper/resource](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource) by setting the [`ProtoV6ProviderFactories` field of `TestCase`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV6ProviderFactories):
+You can test individual providers using the same [acceptance tests](../sdkv2/testing/acceptance-tests) as before. Set the [`ProtoV6ProviderFactories` field] of `TestCase`(https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV6ProviderFactories) to use the acceptance testing framework available in [terraform-provider-sdk/v2/helper/resource](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource).
+
+The following example uses the acceptance testing framework to create a test for two providers.
 
 ```go
 resource.Test(t, resource.TestCase{
