--- a/content/plugin/mux/index.mdx
+++ b/content/plugin/mux/index.mdx
@@ -6,7 +6,7 @@ description: >-
 
 # Combining and Translating Providers
 
-The [terraform-plugin-mux](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux) Go module is a collection of Go packages for combining (multiplexing) and translating provider servers. It helps minimize provider code changes by wrapping existing provider servers. This functionality is based on the [Terraform Plugin Protocol](../how-terraform-works#terraform-plugin-protocol) and [terraform-plugin-go](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go) provider servers.
+The [terraform-plugin-mux](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux) Go module is a collection of Go packages for combining (multiplexing) and translating provider servers. It helps minimize provider code changes by wrapping existing provider servers. This functionality is based on the [Terraform Plugin Protocol](../how-terraform-works#terraform-plugin-protocol) and [`terraform-plugin-go`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go) provider servers.
 
 ## Use Cases
 
@@ -17,11 +17,11 @@ The `terraform-plugin-mux` Go module enables flexibility when you develop and ma
 * Develop with [terraform-plugin-sdk/v2](../sdkv2/sdk-intro), but require Terraform CLI 1.0 or later.
 * Develop with [terraform-plugin-framework](../framework), but support Terraform CLI 0.12 or later.
 
-## tf6muxserver
+## Combine Protocol 6 Providers
 
 Use the [tf6muxserver](./combining-protocol-version-6-providers) package to combine any number of [protocol version 6 provider servers](../how-terraform-works#protocol-version-6) into a single server.
 
-## tf5muxserver
+## Combine Protocol 5 Providers
 
 Use the [tf5muxserver](./combining-protocol-version-5-providers) package to combine any number of [protocol version 5 provider servers](../how-terraform-works#protocol-version-5) into a single server.
 
