--- a/content/plugin/mux/translating-protocol-version-6-to-5.mdx
+++ b/content/plugin/mux/translating-protocol-version-6-to-5.mdx
@@ -6,7 +6,7 @@ description: >-
 
 # Translating Protocol Version 6 to 5
 
-The [`tf6to5server`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux/tf6to5server) package enables translating a [protocol version 6 provider server](../how-terraform-works#protocol-version-6) into a [protocol version 5 provider server](../how-terraform-works#protocol-version-5).
+The [`tf6to5server`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux/tf6to5server) package enables translating a [protocol version 6](../how-terraform-works#protocol-version-6)  provider server into a [protocol version 5](../how-terraform-works#protocol-version-5) provider server.
 
 Use this package to:
 
@@ -26,13 +26,13 @@ The following provider server implementations are supported:
 
 Downgrading provider servers from protocol version 6 to protocol version 5 will return an error if there are protocol version 6 features that are in use that are not available in protocol version 5. Refer to the [protocol version 6](../how-terraform-works#protocol-version-6) documentation for more information.
 
-If publishing to the [Terraform Registry](/registry), the [Terraform Registry manifest file](https://www.terraform.io/registry/providers/publishing#terraform-registry-manifest-file) should have `metadata.protocol_versions` set to `["5.0"]`.
+If publishing to the [Terraform Registry](/registry), set `metadata.protocol_versions` to `["5.0"]` in the [Terraform Registry manifest file](https://www.terraform.io/registry/providers/publishing#terraform-registry-manifest-file).
 
 ## Code Implementation
 
 Use the [`tf6to5server.DowngradeServer()`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux/tf6to5server#DowngradeServer) function to wrap a provider server. For most providers, this is in the provider `main()` function of the root directory `main.go` file or where [`tf5muxserver`](./combining-protocol-version-5-providers) is implemented in the codebase, if applicable.
 
-The following example downgrades a terraform-plugin-framework provider:
+The following example downgrades a `terraform-plugin-framework` provider.
 
 ```go
 downgradedFrameworkProvider, err := tf6to5server.DowngradeServer(context.Background(),func() tfprotov6.ProviderServer {
@@ -40,13 +40,13 @@ downgradedFrameworkProvider, err := tf6to5server.DowngradeServer(context.Backgro
 })
 ```
 
-To serve the downgraded provider directly via [`tf5server`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov5/tf5server):
+The following example uses [`tf5server`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov5/tf5server) to serve the downgraded provider directly.
 
 ```go
 err = tf5server.Serve("registry.terraform.io/example/example", downgradedFrameworkProvider.ProviderServer)
 ```
 
-To serve the downgraded provider while combined with others via [`tf5muxserver`](./combining-protocol-version-5-providers):
+The following example uses [`tf5muxserver`](./combining-protocol-version-5-providers) to serve the downgraded provider while it is combined with other providers.
 
 ```go
 providers := []func() tfprotov5.ProviderServer{
@@ -59,7 +59,7 @@ providers := []func() tfprotov5.ProviderServer{
 muxServer, err := tf5muxserver.NewMuxServer(ctx, providers...)
 ```
 
-Refer to the [`tf5muxserver`](./combining-protocol-version-5-providers) documentation for how to serve the combined provider.
+Refer to the [`tf5muxserver`](./combining-protocol-version-5-providers) documentation for more details about how to serve the combined provider.
 
 ## Testing Implementation
 
