--- a/content/plugin/mux/combining-protocol-version-6-providers.mdx
+++ b/content/plugin/mux/combining-protocol-version-6-providers.mdx
@@ -19,9 +19,9 @@ Protocol version 6 provider servers are compatible with Terraform CLI 1.0 and la
 
 The following provider server implementations are supported:
 
-* [terraform-plugin-framework](../framework/)
-* [terraform-plugin-go tf6server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov6/tf6server)
-* [tf5to6server](./translating-protocol-version-5-to-6)
+* [terraform-plugin-framework](../framework/): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
+* [terraform-plugin-go tf6server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov6/tf6server): Develop Terraform providers for advanced use cases with a lower-level SDK.
+* [tf5to6server](./translating-protocol-version-5-to-6): Translate protocol version 5 providers into protocol version 6.
 
 ## Requirements
 
