Revert release notes changes

--- a/content/enterprise/admin/infrastructure/admin-cli.mdx
+++ b/content/enterprise/admin/infrastructure/admin-cli.mdx
@@ -6,7 +6,7 @@ page_title: Admin CLI Commands - Infrastructure Administration - Terraform Enter
 
 The [Active/Active](/enterprise/install/automated/active-active) operational mode disables the Replicated Admin Console. Instead, it provides admin CLI commands to change the configuration, stop the application safely, and produce support bundles. You must use SSH to log in to a node in the Active/Active cluster to run these commands.
 
--> **Note**: Admin CLI commands are available on the Standalone installation in Terraform Enterprise version v202203-1 and later.
+-> **Note**: Admin CLI commands are available on installations using the Standalone operational mode in Terraform Enterprise version v202203-1 and later.
 
 ### Commands
 
@@ -18,7 +18,9 @@ Note that `tfe-admin` is an alias for `replicated admin`, and can be used interc
 tfe-admin support-bundle
 ```
 
-This command generates a support bundle for all nodes in `/var/lib/replicated/support-bundles`.
+This command generates a support bundle for all nodes.
+
+For Standalone (single node) installations the support bundle will be created in `/var/lib/replicated/support-bundles`.
 
 For Active/Active, the support bundles will be uploaded to the same object store bucket that is used to store Terraform state files. The support bundles for a specific run of the admin command will all be uploaded to a directory with the same JobID, which is a timestamp in [RFC3339](https://datatracker.ietf.org/doc/html/rfc3339) format. If you are sending a support bundle to HashiCorp Support, package and send all associated bundles to ensure that we have all the necessary information.
 
