--- a/content/plugin/mux/combining-protocol-version-6-providers.mdx
+++ b/content/plugin/mux/combining-protocol-version-6-providers.mdx
@@ -11,7 +11,7 @@ The [`tf6muxserver`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mu
 Use this package to:
 
 * Support multiple development teams across separate codebases.
-* Support multiple provider SDK implementations, including but not limited to, combining [terraform-plugin-framework](../framework) and [terraform-plugin-sdk/v2](../sdkv2/sdkv2-intro) after using [tf5to6server](./translating-protocol-version-5-to-6).
+* Support multiple provider SDK implementations. For example, you could upgrade an existing [terraform-plugin-sdk/v2](../sdkv2/sdkv2-intro) provider to protocol version 6 and then combine it with one or more providers built with [terraform-plugin-framework](../framework).
 
 ## Compatibility
 
