--- a/content/plugin/mux/index.mdx
+++ b/content/plugin/mux/index.mdx
@@ -25,10 +25,10 @@ Use the [tf6muxserver](./combining-protocol-version-6-providers) package to comb
 
 Use the [tf5muxserver](./combining-protocol-version-5-providers) package to combine any number of [protocol version 5 provider servers](../how-terraform-works#protocol-version-5) into a single server.
 
-## tf5to6server
+## Translate Protocol 5 Providers to Protocol 6
 
 Use the [tf5to6server](./translating-protocol-version-5-to-6) package to translate a [protocol version 5 provider server](../how-terraform-works#protocol-version-5) into a [protocol version 6 provider server](../how-terraform-works#protocol-version-6).
 
-## tf6to5server
+## Translate Protocol 6 Providers to Protocol 5
 
 Use the [tf6to5server](./translating-protocol-version-6-to-5) package to translate a [protocol version 6 provider server](../how-terraform-works#protocol-version-6) into a [protocol version 5 provider server](../how-terraform-works#protocol-version-5).
