plugin/mux: Update code blocks for ~80 character lines

--- a/content/plugin/mux/combining-protocol-version-5-providers.mdx
+++ b/content/plugin/mux/combining-protocol-version-5-providers.mdx
@@ -82,7 +82,11 @@ func main() {
 		serveOpts = append(serveOpts, tf5server.WithManagedDebug())
 	}
 
-	err = tf5server.Serve("registry.terraform.io/example/example", muxServer.ProviderServer, serveOpts...)
+	err = tf5server.Serve(
+		"registry.terraform.io/example/example",
+		muxServer.ProviderServer,
+		serveOpts...,
+	)
 
 	if err != nil {
 		log.Fatal(err)
