--- a/content/cloud-docs/registry/using.mdx
+++ b/content/cloud-docs/registry/using.mdx
@@ -16,6 +16,7 @@ All users in an organization can view the Terraform Cloud private registry and u
 - **Authentication:** If you run Terraform on the command line, you must [authenticate](/cloud-docs/registry/using#authentication) to Terraform Cloud or your Terraform Enterprise instance to use providers and modules in your organization’s private registry.
 
 
+-> **Note:** Private providers are not available in Terraform Enterprise.
 
 ## Finding Providers and Modules
 
@@ -124,6 +125,7 @@ A workspace can only use private providers and modules from its own organization
 
 Terraform version 0.11 or later is required to use private modules in Terraform cloud workspaces and to use the CLI to apply configurations with private modules. Terraform version 0.13 and later is required to use private providers in Terraform Cloud workspaces and apply configurations with private providers.
 
+-> **Note:** Private providers are not available in Terraform Enterprise.
 
 ### Authentication
 
