--- a/content/cloud-docs/sentinel/import/tfconfig-v2.mdx
+++ b/content/cloud-docs/sentinel/import/tfconfig-v2.mdx
@@ -235,8 +235,8 @@ main = rule {
 complex interpolations or other expressions that combine constants with other
 expression data. An example would be something like `"foo${var.bar}"` or \`"foo"
 
-* var.bar`.  In this situation, the partially constant data would be lost. We
-  will be working to resolve this within future versions of the `tfconfig/v2\`
+* `var.bar`.  In this situation, the partially constant data would be lost. We
+  will be working to resolve this within future versions of the `tfconfig/v2`
   import.
 
 ### Block Expression Representation
