added Azure DevOps Services settings checks
Without the added information you are not able to read repositories from Azure DevOps Services. 

This settings was by default on but recently changed by Azure and now it is default turned off.

--- a/content/cloud-docs/vcs/azure-devops-services.mdx
+++ b/content/cloud-docs/vcs/azure-devops-services.mdx
@@ -25,6 +25,19 @@ The rest of the page explains these steps in more detail.
 
 ~> **Important:** Terraform Cloud only supports Azure DevOps connections which use the `dev.azure.com` domain. If your Azure DevOps project uses the older `visualstudio.com` domain, you will need to migrate using the [steps provided by Microsoft](https://docs.microsoft.com/en-us/azure/devops/release-notes/2018/sep-10-azure-devops-launch#switch-existing-organizations-to-use-the-new-domain-name-url).
 
+## Check Azure DevOps services 
+
+Check the following Azure DevOps Services settings before you begin. 
+
+1. Login to [Azure DevOps Services](https://dev.azure.com/)
+
+1. Enable the `Third-party application access via OAuth` with the following steps
+
+   1. Go to your organization settings
+   1. Under Security click on policies
+   1. Enable the Third-party application access via OAuth  
+   ![Azure DevOps Services Screenshot: Polcies Third-party application access via Oauth](/img/docs/azure-devops-services-oauth-policies.png)
+   
 ## Step 1: On Terraform Cloud, Begin Adding a New VCS Provider
 
 1. Open Terraform Cloud in your browser and navigate to the "VCS Providers" settings for your organization. Click the "Add VCS Provider" button.
