--- a/content/cloud-docs/users-teams-organizations/single-sign-on/azure-ad.mdx
+++ b/content/cloud-docs/users-teams-organizations/single-sign-on/azure-ad.mdx
@@ -44,7 +44,7 @@ For more information on the listed features, visit the [Microsoft Azure AD SAML 
 
 1. Save, and you should see a completed Terraform Cloud SAML configuration.
 
-1. Copy Entity ID and Assertion Consumer Service URL.
+1. Copy Entity ID and Reply URL.
 
 ## Configuration (Microsoft Azure AD)
 
@@ -52,7 +52,7 @@ For more information on the listed features, visit the [Microsoft Azure AD SAML 
 1. On the **Select a single sign-on method** page, select **SAML**.
 1. On the **Set up single sign-on with SAML** page, click the edit/pen icon for **Basic SAML Configuration** to edit the settings.
    1. In the **Identifier** text box, paste the **Entity ID**.
-   1. In the **Reply URL** text box, paste the **Assertion Consumer Service URL**.
+   1. In the **Reply URL** text box, paste the **Reply URL**.
    1. In the **Sign-on URL** text box, type the URL: `https://app.terraform.io/session`
    1. Select **Save**.
 1. In the app's overview page, find the **Manage** section and select **Users and groups**.
